[package]
name = "gl-wrapper"
version = "0.1.0"
authors = ["Nathan Stoddard <nstoddard@users.noreply.github.com>"]
edition = "2018"

[dependencies]
log = { version = "0.4.11", features = ["std"] }
cgmath = { version = "0.18", features = ["serde"] }
serde = { version = "1.0.117", features = ["derive"] }
uid = "0.1.4"
glow = "0.6.1"
collect-mac = "0.1.0"
fnv = "1.0.7"
rusttype = "0.9.2"
wasm-stopwatch = "0.2.0"
lyon_tessellation = { version = "0.17.1", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glfw = "0.41.0"
image = "0.23.12"
chrono = "0.4.19"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.68"
wasm-bindgen-futures = "0.4.18"
futures = "0.3.8"
js-sys = "0.3.45"
web-sys = { version = "0.3.45", features = [
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "WebGl2RenderingContext",
  "WebGlContextAttributes",
  "HtmlImageElement",
  "EventTarget",
  "KeyboardEvent",
  "MouseEvent",
  "RequestInit",
  "RequestMode",
  "Request",
  "Response",
  "HtmlImageElement",
  "HtmlElement",
  "WheelEvent",
] }
