[package]
name = "gl-wrapper"
version = "0.1.0"
authors = ["Nathan Stoddard <nstoddard@users.noreply.github.com>"]
edition = "2018"

[dependencies]
log = { version = "0.4.14", features = ["std"] }
cgmath = { version = "0.18.0", features = ["serde"] }
serde = { version = "1.0.126", features = ["derive"] }
uid = "0.1.5"
glow = "0.10.0"
collect-mac = "0.1.0"
rusttype = "0.9.2"
wasm-stopwatch = "0.2.0"
lyon_tessellation = { version = "0.17.8", optional = true }
fxhash = "0.2.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glfw = "0.41.0"
image = "0.23.14"
chrono = "0.4.19"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4.24"
futures = "0.3.15"
js-sys = "0.3.51"
web-sys = { version = "0.3.51", features = [
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "WebGl2RenderingContext",
  "WebGlContextAttributes",
  "HtmlImageElement",
  "EventTarget",
  "KeyboardEvent",
  "MouseEvent",
  "RequestInit",
  "RequestMode",
  "Request",
  "Response",
  "HtmlImageElement",
  "HtmlElement",
  "WheelEvent",
] }
