[package]
name = "gl-wrapper"
version = "0.1.0"
authors = ["Nathan Stoddard <nstoddard@users.noreply.github.com>"]
edition = "2021"

[dependencies]
log = { version = "0.4.14", features = ["std"] }
cgmath = { version = "0.18.0", features = ["serde"] }
serde = { version = "1.0.130", features = ["derive"] }
uid = "0.1.5"
glow = "0.11.0"
wasm-stopwatch = "0.2.1"
lyon_tessellation = { version = "0.17.10", optional = true }
fxhash = "0.2.1"
# TODO: remove this when this is fixed: https://github.com/alexcrichton/cmake-rs/issues/131
cmake = "=0.1.45"
ab_glyph = "0.2.13"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glfw = "0.42.0"
image = { version = "0.23.14", default-features = false, features = ["png"] }
time = { version = "0.3.3", features = ["formatting"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.28"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
js-sys = "0.3.55"
web-sys = { version = "0.3.55", features = [
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "WebGl2RenderingContext",
  "WebGlContextAttributes",
  "HtmlImageElement",
  "EventTarget",
  "KeyboardEvent",
  "MouseEvent",
  "RequestInit",
  "RequestMode",
  "Request",
  "Response",
  "HtmlImageElement",
  "HtmlElement",
  "WheelEvent",
] }
